Add directory overview to README and empty folder to repo

--- a/.gitignore
+++ b/.gitignore
@@ -412,7 +412,10 @@ Makefile
 out
 
 
-build
+# Ignores contents of build folder but not the folder itself.
+build/*
+!build/.gitkeep 
+
 
 /SkylineEngine_XCode
 /subprojects
