--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ CPMAddPackage("gh:libsdl-org/SDL#release-3.2.12")
 CPMAddPackage("gh:g-truc/glm#1.0.1")
 CPMAddPackage("gh:spnda/fastgltf#v0.8.0")
 CPMAddPackage("gh:ocornut/imgui#v1.91.9b")
+CPMAddPackage("gh:marzer/tomlplusplus#v3.4.0")
 
 CPMAddPackage(
     NAME JoltPhysics
@@ -44,6 +45,7 @@ target_link_libraries(SHARED_DEPENDENCIES INTERFACE
         glm::glm
         imgui
         skl-math
+        tomlplusplus::tomlplusplus
 )
 
 add_library(RENDERING_BACKEND INTERFACE)
